# bayesdecision

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
bayes_decision/: __init__.py  calibrate.py  gpu.py  parallel.py  plots.py
bayesdecision/: __init__.py  calibrate.py  core.py  parallel.py
tests/: test_core.py
